# Enix

./: .gitignore  AGENTS.md  CLAUDE.md  CMakeLists.txt  Enix.sln  README.md
Enix/: CMakeLists.txt  Device.h  Engine.cpp  Engine.h  Enix.vcxproj  Enix.vcxproj.filters  Main.cpp  Model.h  OpenGLEngine.cpp  OpenGLEngine.h  Vertex.h  VulkanEngine.cpp  VulkanEngine.h  VulkanEngineImgui.cpp  VulkanEngineImgui.h  imgui.ini
Enix/Asset/: MeshAsset.cpp  MeshAsset.h  TextureAsset.cpp  TextureAsset.h
Enix/Core/: Actor.cpp  Actor.h  Camera.cpp  Camera.h  MeshActor.cpp  MeshActor.h  PointLight.h  Scene.cpp  Scene.h  ThreadPool.h  Transform.cpp  Transform.h
Enix/Input/: InputSystem.cpp  InputSystem.h
Enix/Render/: Device.cpp  Device.h  GraphicsPipeline.cpp  GraphicsPipeline.h  Image.cpp  Image.h  Instance.cpp  Instance.h  Material.cpp  Material.h  Model.cpp  Model.h  RenderPass.cpp  RenderPass.h  Renderer.cpp  Renderer.h  SwapChain.cpp  SwapChain.h  Texture.cpp  Texture.h  Vertex.h  VulkanUtility.h  Window.cpp  Window.h  WindowSurface.cpp  WindowSurface.h
Enix/UI/: AppUI.cpp  AppUI.h
Shaders/: default_lit.frag.spv  funky_triangle.frag.spv  mesh.vert.spv  shader.frag  shader.frag.spv  shader.vert  shader.vert.spv  textured_lit.frag.spv  tri_mesh_ssbo.vert.spv
glfw/: glfw.vcxproj  glfw.vcxproj.filters
imgui/: imgui.vcxproj.filters
imgui/imgui/examples/example_glfw_vulkan/: example_glfw_vulkan.vcxproj
